# unitemate-v2

./: .gitignore  AGENTS.md  CLAUDE.md  CSV2json.py  Documents.lnk  LEGACY_MATCHMAKING_REQUIREMENTS.md  Makefile  README.md  SYSTEM_DESIGN.md  achievements.csv  dynamodb_investigation.py  fix_ongoing_matches.py  matches_data.json  package-lock.json  pokemon.csv  test_dummy_auth.py  test_dummy_hash.py  update_master_data.py  websocket_test.js
.claude/: settings.local.json
backend/: .env.dev  .env.example  .env.prod  .env.sample  .gitignore  CUsershasegAppDataLocalTempnode-dependencies-0e3dbd93fdf82d76-prod  CUsershasegAppDataLocalTempnode-dependencies-5d2da0b838a2f1e3-dev  MATCH_SCREEN_AUTO_SWITCH_DESIGN.md  Makefile  all_matches_20250916_104941.json  analyze_all_matches_violations_prod.py  analyze_user_violations_prod.py  analyze_violations.py  check_284.py  cleanup_dummy_users.py  complete_violation_analysis_753912195871670272_20250916_111614.json  export_matches_20250913_095215.json  fix_invalid_matches.py  migration_script.py  package-lock.json  package.json  prod_violation_analysis_753912195871670272_20250916_105902.json  prod_violation_analysis_753912195871670272_20250916_110435.json  pyproject.toml  serverless.yml  test-ws-connection.py  test-ws-payload.json  update_dummy_users.py  violation_analysis_753912195871670272_20250916_104941.json
backend/migrations/: achievements-seed.json  create_dummy_users.py  dummy_users_list.json  master-data-seed.json  matches-seed.json  migrate_from_legacy.py  users-seed.json
backend/scripts/: add_achievements.py  award_badges.py  clear_master_data.py  convert_achievements.py  fix_dummy_users_auth0_sub.py  fix_match_18_records.py  grant_season_badges.py  initialize_data.py  register_badge_master.py  reset_season_data.py  update_master_data.py
backend/src/: auth.py  py.typed
backend/src/handlers/: achievements.py  admin.py  admin_matches.py  auth.py  badges.py  discord_check.py  dummy_auth.py  hello.py  master.py  match_judge.py  match_report.py  matches.py  matchmaking.py  pick_simulator_rooms.py  pokemon.py  queue.py  queue_stream.py  ranking_calculator.py  records.py  season_reset.py  seasons.py  stripe_payment.py  users.py  websocket.py  websocket_test.py
backend/src/models/: achievement.py  match.py  pokemon.py  queue.py  record.py  report.py  season.py  user.py
backend/src/repositories/: achievement_repository.py  match_repository.py  pokemon_repository.py  queue_repository.py  record_repository.py  user_repository.py
backend/src/services/: achievement_service.py  discord_service.py  match_service.py  penalty_service.py  pokemon_service.py  queue_service.py  record_service.py  season_reset_service.py  season_service.py  user_service.py
backend/src/utils/: __init__.py  auth0_management.py  cors.py  response.py  time_validator.py
backend/tests/: test_integration_matchmaking.py  test_match_report.py  test_matchmaking.py  test_matchmaking_simple.py
claudedocs/: COMPREHENSIVE_CODE_REVIEW.md  WEBSOCKET_OPTIMIZATION_GUIDE.md  code_quality_assessment.md  websocket_analysis.md  websocket_security_analysis.md
docs/: ENVIRONMENT_MANAGEMENT.md  PROFILE_ARCHITECTURE_ANALYSIS.md  (+2 more)
(+107 files in other folders)
