[project]
name = "unitemate-backend"
version = "0.1.0"
description = "Backend for Unitemate v2"
authors = [{ name = "Shun Fukusumi", email = "shun.fukusumi@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-jose[cryptography]>=3.3.0",
    "requests==2.32.3",
    "boto3==1.35.88",
    "pydantic>=2.11.7",
    "stripe>=11.1.0",
    "aiohttp>=3.10.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.13",
    "mypy==1.16.0",
    "mypy-boto3-dynamodb==1.38.4",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # print() の使用を許可
    "D400",   # docstringの末尾がピリオド.の強制を無効化
    "D415",   # docstringの末尾がピリオド.の強制を無効化
    "INP001", # __init__.py の設定不要
    "ERA001", # コメントアウトされたコードをOK
    "RET504", # 直接returnしなくてもOK
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Allow unused arguments in function definitions.
    "D203",
    "D211",
    "D212",
    "D213",
    "ARG001",
    "ANN401",
    "COM812", # conflicts with formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "moto>=5.1.9",
    "pytest>=8.4.1",
    "ruff>=0.11.13",
]
